src/objects/ffr__ReportingValue__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingvalue</customHelpPage>
    <fields>
        <fullName>ffr__FieldName__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__FieldType__c</fullName>
        <label>Field Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__QualifiedKey__c</fullName>
        <formula>TRIM(TEXT(ffr__Type__c) + &apos; &apos; + TEXT(ffr__TemplateKey__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type / Template Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingDataRange__c</fullName>
        <label>Reporting Data Range</label>
        <referenceTo>ffr__ReportingDataRange__c</referenceTo>
        <relationshipLabel>Reporting Values</relationshipLabel>
        <relationshipName>ReportingValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__Sort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Sum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateKey__c</fullName>
        <label>Template Key</label>
        <picklist>
            <controllingField>ffr__Type__c</controllingField>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <inlineHelpText>If the reporting data range type is Summary, you must select an aggregation query method: Group or Sum. If the data range type is Detail, you must select the list query method: Detail. You cannot mix these query methods.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reporting Value</label>
    <nameField>
        <label>Reporting Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Values</pluralLabel>
    <recordTypes>
        <fullName>ffr__Detail</fullName>
        <active>true</active>
        <description>This record type is only valid when the Data Range Type is &quot;Detail&quot;.</description>
        <label>Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ffr__Summary</fullName>
        <active>true</active>
        <description>This record type is only valid when the Data Range Type is &quot;Summary&quot;.</description>
        <label>Summary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>